# h9s

./: .gitignore  CLAUDE.md  Makefile  README.md  h9s.spec  helm-dashboard  install.sh  pyproject.toml
.claude/: settings.local.json
.github/: release-notes-template.md
.github/workflows/: release.yml
Formula/: h9s.rb
docs/superpowers/plans/: 2026-03-20-helm-dashboard-enhancements.md
helm_dashboard/: __init__.py  __main__.py  app.py  helm_client.py  widgets.py
helm_dashboard/screens/: __init__.py  context.py  describe.py  detail.py  dialogs.py  help.py  logs.py  namespace.py  repos.py
tests/: test_helm_client.py
