[project]
name = "helm-dashboard"
version = "1.0.0"
description = "A k9s-style terminal UI dashboard for Helm releases on Kubernetes"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Razvan" }]
keywords = ["helm", "kubernetes", "tui", "dashboard", "k9s"]

dependencies = [
    "textual>=0.85.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
helm-dashboard = "helm_dashboard.app:main"

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
